# etoshokan

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  _headers_ignore  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.json  wrangler.toml
.github/workflows/: ci.yml
TODO/: abstract-ebook-engine.md
assets/: app-icon.aseprite
memory/: MEMORY.md
scripts/: prepare-apk.js  prepare-version.js
src/: app.d.ts  app.html  globals.d.ts  hooks.server.ts  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: auth-client.ts  constants.server.ts  constants.ts  utils.ts
src/lib/client/: auth-client.ts  session-store.ts  session.svelte.ts  store.ts
src/lib/components/: AppNav.svelte  AppTitle.svelte  BookSyncStateBadge.svelte  DictionaryOptionsDialog.svelte  DictionaryPopup.svelte  EBookContextMenu.svelte  EBookOptionsDrawer.svelte  EBookSavedWordsDrawer.svelte  EBookTableOfContents.svelte  EditCategoryDialog.svelte  LanguageFlag.svelte  Loading.svelte  PwaInstallPrompt.svelte  SaveAsDialog.svelte  SaveWordActions.svelte  ThemeToggle.svelte  TranslateSelection.svelte  TranslationBox.svelte  edit-category-dialog.svelte.ts  save-as-dialog.svelte.ts
src/lib/dictionary/: index.ts  jmdict_dictionary$jp_en.ts  words-storage.svelte.ts
src/lib/ebook/: books.mutation.ts  books.query.ts  (+11 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  HandleAuthDeepLinking.svelte  handleAuthDeepLinking.ts  layout.css  query.ts
(+121 files in other folders)
